# fcitx5-gtk

./: .formatignore  CMakeLists.txt  README  README.md  clang-format.sh  config.h.in
.github/workflows/: check.yml
fcitx-gclient/: CMakeLists.txt  Fcitx5GClient.pc.in  Fcitx5GClientConfig.cmake.in  fcitxclient.c  fcitxclient.h  fcitxconnection.c  fcitxconnection.h  fcitxgclient.c  fcitxgclient.h  fcitxgwatcher.c  fcitxgwatcher.h
gtk-common/: marshall.list
gtk2/: CMakeLists.txt  fcitxflags.h  fcitxim.c  fcitximcontext.cpp  fcitximcontext.h  immodule-probing.cpp  utils.h
gtk3/: CMakeLists.txt  fcitximcontext.cpp  fcitximcontext.h  fcitxtheme.cpp  fcitxtheme.h  gtk3inputwindow.cpp  gtk3inputwindow.h  immodule-probing.cpp  inputwindow.cpp  inputwindow.h  utils.cpp  utils.h
gtk4/: CMakeLists.txt  fcitx5imcontext.h  fcitxflags.h  fcitxim.c  fcitximcontext.cpp  fcitximcontext.h  fcitximcontext5.cpp  fcitximcontext5.h  fcitximcontextprivate.h  fcitxtheme.cpp  fcitxtheme.h  gtk4inputwindow.cpp  gtk4inputwindow.h  inputwindow.cpp  inputwindow.h  utils.cpp
